# yolo_ros

./: .gitignore  README.md
.devcontainer/: .p10k.zsh  .zshrc  99-realsense-libusb.rules  Dockerfile  devcontainer.json
yolo_bringup/launch/: yolo-world.launch.py  yolo.launch.py  yolov10.launch.py  yolov11.launch.py  yolov12.launch.py  yolov5.launch.py  yolov8.launch.py  yolov9.launch.py
yolo_msgs/: CMakeLists.txt
yolo_msgs/msg/: Detection.msg  KeyPoint2D.msg  Mask.msg
yolo_ros/: package.xml
yolo_ros/yolo_ros/: debug_node.py  detect_3d_node.py  tracking_node.py  yolo_node.py
